<resources>
    <string name="app_name">AndriodLab_Project1</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_home_screen">HomeScreen</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="Create_new_course">Create a new course</string>
    <string name="Edit_delete">Edit or delete courses</string>
    <string name="Make_course_available">Make course available </string>
    <string name="ViewInstructorProfileActivity">View Instructor Profile</string>
    <string name="ViewStudentProfileActivity">View Student Profile</string>
    <string name="Course_history">Course history</string>
    <string name="Registration_decisions">Registration decisions</string>
    <string name="Course_students">Course students</string>

    <string name="menu_profile">Profile</string>
    <string name="menu_logout">Logout</string>
    <string name="Admin">Admin</string>
    <string name="Student">Student</string>
    <string name="Instructor">Instructor</string>
    <string name="profile">Profile</string>
    <string name="Search_courses">Search courses</string>
    <string name="Course_registration_alert">Messages</string>
    <string name="OfferingCourses">Offering Courses</string>
    <string name="AvailableCourses">Available Courses</string>
    <string name="Registration_decision_alert">Registration decision alert</string>
    <string name="Completed_courses_overview">Completed courses overview</string>
    <string name="CoursesStudiedInTheCenter">Courses Studied In The Center</string>
    <string name="CourseWithdraw">Course Withdraw</string>
    <string name="Full_course_history">Full course history</string>
    <string name="Course_enrollment_updates">Course enrollment updates</string>
    <string name="EditCourseAvailableForRegistrationActivity">Modify Course Registration</string>
    <string name="CoursesPreviouslyTaughtActivity">Course History</string>
    <string name="CurrentSchedule">Current Schedule</string>
    <string name="ViewStudentsActivity">Student Roster</string>
    <string name="menu_drawer_open">Drawer Open</string>
    <string name="menu_drawer_close">Drawer Close</string>
</resources>