<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="student_navigation_view">

    <group android:checkableBehavior="single">
        <item android:title="@string/Student">
            <menu>
                <group android:checkableBehavior="single">
                    <item
                        android:id="@+id/home"
                        android:icon="@drawable/baseline_home_24"
                        android:title="@string/menu_home" />
                    <item
                        android:id="@+id/CNC"
                        android:icon="@drawable/baseline_add_24"
                        android:title="@string/Create_new_course" />
                    <item
                        android:id="@+id/ED"
                        android:icon="@drawable/baseline_edit_24"
                        android:title="@string/Edit_delete" />
                    <item
                        android:id="@+id/MCA"
                        android:icon="@drawable/baseline_event_available_24"
                        android:title="@string/Make_course_available" />
                    <item
                        android:id="@+id/VUP"
                        android:icon="@drawable/baseline_supervised_user_circle_24"
                        android:title="@string/view_users_profile" />
                    <item
                        android:id="@+id/CH"
                        android:icon="@drawable/baseline_history_24"
                        android:title="@string/Course_history" />
                    <item
                        android:id="@+id/RD"
                        android:icon="@drawable/baseline_check_24"
                        android:title="@string/Registration_decisions" />
                    <item
                        android:id="@+id/CS"
                        android:icon="@drawable/baseline_co_present_24"
                        android:title="@string/Course_students" />
                </group>
            </menu>
        </item>

        <item android:title="@string/profile">
            <menu>
                <group android:checkableBehavior="single">
                    <item
                        android:id="@+id/logout"
                        android:icon="@drawable/baseline_logout_24"
                        android:title="@string/menu_logout" />
                </group>
            </menu>
        </item>
    </group>
</menu>